--- a/static/style.css
+++ b/static/style.css
@@ -364,54 +364,43 @@ a:hover {
 }
 
 .comment-box button {
-  background-color: #007bff;
+  background-color: #ff2626; /* Cor original do botão */
   border-radius: 4px;
-  padding: 10px;
+  padding: 12px;
   font-size: 1em;
   color: white;
   font-weight: bold;
   width: auto;
-  align-self: flex-end;
+  align-self: flex-end; /* Alinhar à direita */
   margin-top: 5px;
   cursor: pointer;
 }
 
 .comment-box button:hover {
-  background-color: #0056b3;
+  background-color: #cc2020; /* Hover original do botão */
 }
 
 .container h2 {
   text-align: center;
   margin-bottom: 25px;
-  flex-grow: 1;
 }
 
-.btn-voltar-seta {
+.btn-voltar {
   background-color: #ff2626;
   border: none;
   color: white;
   font-weight: bold;
-  padding: 8px 12px;
-  border-radius: 8px;
+  padding: 8px 15px;
+  border-radius: 4px;
   cursor: pointer;
-  font-size: 1.8em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45px;
-  height: 45px;
-  margin-right: 15px;
-  transition: background-color 0.3s ease;
+  margin-bottom: 15px;
+  font-size: 1em;
+  display: inline-block;
+  text-transform: lowercase;
 }
 
-.btn-voltar-seta:hover {
+.btn-voltar:hover {
   background-color: #cc2020;
-}
-
-.header-post-view {
-  display: flex;
-  align-items: center;
-  margin-bottom: 25px;
 }
 
 @media (max-width: 600px) {
@@ -472,18 +461,6 @@ a:hover {
   .comment-box textarea {
     min-height: 30px;
     height: auto;
-  }
-
-  .header-post-view {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  .btn-voltar-seta {
-    font-size: 1.5em;
-    width: 40px;
-    height: 40px;
-    padding: 6px 10px;
   }
 }
 
