--- a/static/style.css
+++ b/static/style.css
@@ -343,6 +343,11 @@ a:hover {
   flex-direction: column;
 }
 
+.comment-box form {
+  display: flex;
+  flex-direction: column;
+}
+
 .comment-box textarea {
   background-color: #1a1a1a;
   border: 1px solid #777;
@@ -361,12 +366,12 @@ a:hover {
 .comment-box button {
   background-color: #ff2626;
   border-radius: 4px;
-  padding: 8px 15px; /* Reduzindo o padding para encolher o botão */
-  font-size: 0.9em; /* Reduzindo a fonte */
+  padding: 8px 15px;
+  font-size: 0.9em;
   color: white;
   font-weight: bold;
-  width: auto; /* Deixando a largura se ajustar ao conteúdo */
-  align-self: flex-end; /* Alinhar à direita */
+  width: auto;
+  align-self: flex-end;
   margin-top: 5px;
   cursor: pointer;
 }
@@ -385,19 +390,23 @@ a:hover {
   border: none;
   color: white;
   font-weight: bold;
-  padding: 5px 10px; /* Reduzindo o padding para encolher o botão */
+  padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
   margin-bottom: 15px;
-  font-size: 0.9em; /* Reduzindo a fonte */
+  font-size: 0.9em;
   display: inline-block;
   text-transform: lowercase;
-  width: auto; /* Ajustar a largura para a palavra "Voltar" */
-  float: left; /* Alinhar à esquerda */
+  width: auto;
+  float: left;
 }
 
 .btn-voltar:hover {
   background-color: #cc2020;
+}
+
+button:active {
+  transform: scale(1.05);
 }
 
 @media (max-width: 600px) {
@@ -419,10 +428,6 @@ a:hover {
     padding: 16px 23px;
     border-radius: 0 0 18px 18px;
     margin-top: -4px;
-  }
-
-  .post-outro {
-    border-radius: 0 26px 18px 18px;
   }
 
   .user-box {
@@ -465,47 +470,6 @@ a:hover {
   font-size: 1.5em;
   font-weight: bold;
   color: #ff2626;
-}
-
-.nav-top {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  background: #000;
-  padding: 8px 0;
-  text-align: center;
-  border-bottom: 1px solid #363636;
-  z-index: 100;
-  transition: transform 0.3s ease-in-out;
-}
-
-.nav-footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  background: #000;
-  padding: 20px 0;
-  text-align: center;
-  border-top: 1px solid #fff;
-  z-index: 100;
-  transition: transform 0.3s ease-in-out;
-}
-
-.nav-footer nav {
-  display: flex;
-  justify-content: center;
-  gap: 25px;
-  width: 100%;
-}
-
-.nav-footer nav a {
-  color: #fff;
-  font-size: 1.4em;
-  font-weight: bold;
 }
 
 img,
