--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -94,6 +94,24 @@
       </nav>
     </footer>
     <script>
+      /*SCRIPT DE SUMIR A NAV*/
+      let lastScroll = 0;
+      const navTop = document.querySelector(".nav-top");
+      const navFooter = document.querySelector(".nav-footer");
+
+      window.addEventListener("scroll", () => {
+        const currentScroll = window.pageYOffset;
+        if (currentScroll > lastScroll) {
+          navTop.style.transform = "translateY(-100%)";
+          navFooter.style.transform = "translateY(100%)";
+        } else {
+          navTop.style.transform = "translateY(0%)";
+          navFooter.style.transform = "translateY(0%)";
+        }
+        lastScroll = currentScroll;
+      });
+
+      /*SCRIPT DE AUMENTAR O TAMANHO DA CAIXINHA DE ESCRITA*/
       document.querySelectorAll("textarea").forEach((t) => {
         t.addEventListener("input", () => {
           t.style.height = "auto";
