--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class="container" style="padding-top: 60px">
+    <div class="container" style="padding-top: 30px">
       <button
         onclick="window.location='{{ url_for('feed') }}'"
         class="btn-voltar"
@@ -95,21 +95,19 @@
     </footer>
     <script>
       /*SCRIPT DE SUMIR A NAV*/
-      let lastScroll = 0;
-      const navTop = document.querySelector(".nav-top");
-      const navFooter = document.querySelector(".nav-footer");
-
-      window.addEventListener("scroll", () => {
-        const currentScroll = window.pageYOffset;
-        if (currentScroll > lastScroll) {
-          navTop.style.transform = "translateY(-100%)";
-          navFooter.style.transform = "translateY(100%)";
-        } else {
-          navTop.style.transform = "translateY(0%)";
-          navFooter.style.transform = "translateY(0%)";
-        }
-        lastScroll = currentScroll;
-      });
+      if (navTop && navFooter) {
+        window.addEventListener("scroll", () => {
+          const currentScroll = window.pageYOffset;
+          if (currentScroll > lastScroll) {
+            navTop.style.transform = "translateY(-100%)";
+            navFooter.style.transform = "translateY(100%)";
+          } else {
+            navTop.style.transform = "translateY(0%)";
+            navFooter.style.transform = "translateY(0%)";
+          }
+          lastScroll = currentScroll;
+        });
+      }
 
       /*SCRIPT DE AUMENTAR O TAMANHO DA CAIXINHA DE ESCRITA*/
       document.querySelectorAll("textarea").forEach((t) => {
