--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -10,6 +10,8 @@
     />
   </head>
   <body>
+    <div class="nav-top">Feed • Opinion</div>
+
     <div class="container" style="padding-top: 30px">
       <button
         onclick="window.location='{{ url_for('feed') }}'"
