--- a/static/style.css
+++ b/static/style.css
@@ -11,17 +11,6 @@ body {
   padding: 20px 30px;
 }
 
-nav a {
-  margin: 0 15px;
-  color: #007bff;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-nav a:hover {
-  text-decoration: underline;
-}
-
 input {
   width: 100%;
   padding: 10px 12px;
@@ -211,6 +200,18 @@ a:hover {
 
 .comentario-texto strong {
   color: #ff2626;
+}
+
+.nav-top {
+  background: #000;
+  color: #fff;
+  font-size: 1.4em;
+  font-weight: bold;
+  text-align: center;
+  padding: 18px 0;
+  border: 1.6px solid #444;
+  border-radius: 20px 20px 0 0;
+  margin-bottom: 20px;
 }
 
 .nav-footer {
