repaginação na nav fixa

--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -10,6 +10,7 @@
     />
   </head>
   <body>
+        <div class="nav-top">Perfil • Opinion</div>
     <footer class="nav-footer">
       <nav>
         <a href="{{ url_for('perfil') }}">Perfil</a>
