--- a/static/style.css
+++ b/static/style.css
@@ -203,14 +203,14 @@ a:hover {
 }
 
 .nav-top {
-  background: #000;
+  background: #ff2626;
   color: #fff;
   font-size: 1.4em;
   font-weight: bold;
   text-align: center;
   padding: 18px 0;
   border: 1.6px solid #444;
-  border-radius: 20px 20px 0 0;
+  border-radius: 0 0 20px 20px;
   margin-bottom: 20px;
 }
 
