--- a/templates/ver_post.html
+++ b/templates/ver_post.html
@@ -10,8 +10,7 @@
     />
   </head>
   <body>
-    <div class="nav-top">Feed • Opinion</div>
-
+    <div class="nav-top">Respostas • Opinion</div>
     <div class="container" style="padding-top: 30px">
       <button
         onclick="window.location='{{ url_for('feed') }}'"
