Remoção na linha de baixo do ver respostas

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -86,7 +86,7 @@
               href="{{ url_for('ver_post', post_id=post.id) }}"
               style="
                 margin-left: 5px;
-                text-decoration: underline;
+                text-decoration: none;
                 font-size: 13px;
                 /* novo: número maior */
               "
