--- a/templates/feed.html
+++ b/templates/feed.html
@@ -198,7 +198,7 @@
       document.querySelectorAll("textarea").forEach((t) => {
         t.addEventListener("input", () => {
           t.style.height = "auto";
-          t.style.height = t.scrollHeight + "px";
+          t.style.height = t.scrollHeight + 15 + "px";
         });
       });
     </script>
