--- a/templates/feed.html
+++ b/templates/feed.html
@@ -106,8 +106,20 @@
 
     <footer class="nav-footer">
       <nav>
-        <a href="{{ url_for('perfil') }}">Perfil</a>
-        <a href="{{ url_for('feed') }}">Feed</a>
+        <a href="{{ url_for('perfil') }}">
+          <img
+            src="{{ url_for('static', filename='images/perfil.png') }}"
+            alt="Perfil"
+            class="icone"
+          />
+        </a>
+        <a href="{{ url_for('feed') }}">
+          <img
+            src="{{ url_for('static', filename='images/home.png') }}"
+            alt="Feed"
+            class="icone"
+          />
+        </a>
         <a href="{{ url_for('logout') }}">Sair</a>
       </nav>
     </footer>
