--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -23,6 +23,7 @@
       <h2>Perfil</h2>
       <p><strong>Apelido:</strong> {{ apelido }}</p>
       <p><strong>Idade:</strong> {{ idade }}</p>
+      <a href="{{ url_for('logout') }}">Sair</a>
     </div>
   </body>
 </html>
