Aumentando o tamanho das pngs

--- a/static/style.css
+++ b/static/style.css
@@ -244,6 +244,11 @@ a:hover {
   font-weight: bold;
 }
 
+.nav-footer img {
+  width: 36px;
+  height: 36px;
+}
+
 .scroll-to-top {
   position: fixed;
   bottom: 100px;
