Criando aba de Trends

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -120,6 +120,13 @@
             class="icone"
           />
         </a>
+        <a href="{{ url_for('trending') }}">
+          <img
+            src="{{ url_for('static', filename='images/trend.png') }}"
+            alt="Trending"
+            class="icone"
+          />
+        </a>
       </nav>
     </footer>
 
