--- a/templates/feed.html
+++ b/templates/feed.html
@@ -127,6 +127,13 @@
             class="icone"
           />
         </a>
+        <a href="{{ url_for('search') }}">
+          <img
+            src="{{ url_for('static', filename='images/search.png') }}"
+            alt="Search"
+            class="icone"
+          />
+        </a>
       </nav>
     </footer>
 
