--- a/templates/feed.html
+++ b/templates/feed.html
@@ -122,7 +122,7 @@
         </a>
         <a href="{{ url_for('trending') }}">
           <img
-            src="{{ url_for('static', filename='images/trend.png') }}"
+            src="{{ url_for('static', filename='images/trending.png') }}"
             alt="Trending"
             class="icone"
           />
