--- a/templates/trending.html
+++ b/templates/trending.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trending • Opinion</title>
   </head>
-  <body></body>
+  <body>
+    <p>Olá essas são as tendencias</p>
+  </body>
 </html>
