Adição do HTML de grupos

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -128,6 +128,13 @@
             class="icone"
           />
         </a>
+        <a href="{{ url_for('groups') }}">
+          <img
+            src="{{ url_for('static', filename='images/groups.png') }}"
+            alt="Groups"
+            class="icone"
+          />
+        </a>
         <a href="{{ url_for('perfil') }}">
           <img
             src="{{ url_for('static', filename='images/perfil.png') }}"
