Url dos grupos arrumada

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -130,7 +130,7 @@
         </a>
         <a href="{{ url_for('groups') }}">
           <img
-            src="{{ url_for('static', filename='images/groups.png') }}"
+            src="{{ url_for('static', filename='images/groups.PNG') }}"
             alt="Groups"
             class="icone"
           />
