--- a/templates/groups.html
+++ b/templates/groups.html
@@ -3,7 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gourps • Opinion</title>
+    <title>Groups • Opinion</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background: #000;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <h1>FUNÇÃO DE GRUPOS EM BREVE !!</h1>
