--- a/templates/groups.html
+++ b/templates/groups.html
@@ -18,6 +18,46 @@
     </style>
   </head>
   <body>
-    <h1>FUNÇÃO DE GRUPOS EM BREVE !!</h1>
+    <h2>FUNÇÃO DE GRUPOS EM BREVE !!</h2>
+    <footer class="nav-footer">
+      <nav>
+        <a href="{{ url_for('feed') }}">
+          <img
+            src="{{ url_for('static', filename='images/home.png') }}"
+            alt="Feed"
+            class="icone"
+          />
+        </a>
+        <a href="{{ url_for('search') }}">
+          <img
+            src="{{ url_for('static', filename='images/search.png') }}"
+            alt="Search"
+            class="icone"
+          />
+        </a>
+
+        <a href="{{ url_for('trending') }}">
+          <img
+            src="{{ url_for('static', filename='images/trending.PNG') }}"
+            alt="Trending"
+            class="icone"
+          />
+        </a>
+        <a href="{{ url_for('groups') }}">
+          <img
+            src="{{ url_for('static', filename='images/groups.PNG') }}"
+            alt="Groups"
+            class="icone"
+          />
+        </a>
+        <a href="{{ url_for('perfil') }}">
+          <img
+            src="{{ url_for('static', filename='images/perfil.png') }}"
+            alt="Perfil"
+            class="icone"
+          />
+        </a>
+      </nav>
+    </footer>
   </body>
 </html>
