--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -33,6 +33,13 @@
             src="{{ url_for('static', filename='images/trending.PNG') }}"
             alt="Trending"
             class="icone"
+          />  
+        </a>
+        <a href="{{ url_for('groups') }}">
+          <img
+            src="{{ url_for('static', filename='images/groups.PNG') }}"
+            alt="Groups"
+            class="icone"
           />
         </a>
         <a href="{{ url_for('perfil') }}">
