Finalizando o HTML groups

--- a/templates/groups.html
+++ b/templates/groups.html
@@ -9,11 +9,13 @@
         font-family: Arial, sans-serif;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
+        padding-top: 100px;
         height: 100vh;
         margin: 0;
         background: #000;
         color: #fff;
+        flex-direction: column;
       }
     </style>
         <link
@@ -23,6 +25,11 @@
   </head>
   <body>
     <h2>FUNÇÃO DE GRUPOS EM BREVE !!</h2>
+      <p>
+        A criação dessa função requer uma pequena quantidade de verba.<br>
+        Pedimos paciência para o desenvolvimento dessa funcionalidade,<br>
+        que irá unir pessoas e amigos.
+      </p>
     <footer class="nav-footer">
       <nav>
         <a href="{{ url_for('feed') }}">
