Arrumando a função de aumentar a textarea ao escrever

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -226,7 +226,7 @@
         document.querySelectorAll("textarea").forEach((t) => {
           t.addEventListener("input", () => {
             t.style.height = "auto";
-            t.style.height = t.scrollHeight + 35 + "px";
+            t.style.height = t.scrollHeight + "px";
           });
         });
       });
