--- a/templates/feed.html
+++ b/templates/feed.html
@@ -225,9 +225,13 @@
 
       document.addEventListener("DOMContentLoaded", () => {
         document.querySelectorAll("textarea").forEach((t) => {
+          t.style.overflowY = "hidden";
+          t.style.height = "auto";
+
           t.addEventListener("input", () => {
-            t.style.height = "auto";
-            t.style.height = t.scrollHeight + "px";
+            if (t.scrollHeight > t.clientHeight) {
+              t.style.height = t.scrollHeight + "px";
+            }
           });
         });
       });
