Textarea aumentado junto com a escrita 2

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -229,8 +229,9 @@
           t.style.height = "auto";
 
           t.addEventListener("input", () => {
-            t.style.height = "auto";
-            t.style.height = t.scrollHeight + "px";
+            if (t.scrollHeight > t.clientHeight) {
+              t.style.height = t.scrollHeight + "px";
+            }
           });
         });
       });
