--- a/templates/feed.html
+++ b/templates/feed.html
@@ -229,10 +229,8 @@
           t.style.height = "auto";
 
           t.addEventListener("input", () => {
-            if (newHeight - currentHeight > lineHeight) {
-              t.style.height = currentHeight + lineHeight + "px";
-            } else {
-              t.style.height = newHeight + "px";
+            if (t.scrollHeight > t.clientHeight) {
+              t.style.height = t.scrollHeight + "px";
             }
           });
         });
