Modificação nas mensagem de grupos

--- a/templates/groups.html
+++ b/templates/groups.html
@@ -9,13 +9,13 @@
         font-family: Arial, sans-serif;
         display: flex;
         justify-content: center;
-        align-items: flex-start;
-        padding-top: 100px;
+        align-items: center;
         height: 100vh;
         margin: 0;
         background: #000;
         color: #fff;
         flex-direction: column;
+        padding-top: 0;
       }
     </style>
         <link
@@ -26,9 +26,9 @@
   <body>
     <h2>FUNÇÃO DE GRUPOS EM BREVE !!</h2>
       <p>
-        A criação dessa função requer uma pequena quantidade de verba.<br>
-        Pedimos paciência para o desenvolvimento dessa funcionalidade,<br>
-        que irá unir pessoas e amigos.
+        A criação dessa função requer uma pequena quantidade de verba.
+        Pedimos paciência para o desenvolvimento dessa funcionalidade,
+        que fará pessoas falarem sobre os mesmos interesses
       </p>
     <footer class="nav-footer">
       <nav>
