Modificação nas mensagem de grupos 2

--- a/templates/groups.html
+++ b/templates/groups.html
@@ -15,7 +15,8 @@
         background: #000;
         color: #fff;
         flex-direction: column;
-        padding-top: 0;
+        text-align: center;
+        padding: 0;
       }
     </style>
         <link
