Modificação nas mensagem de grupos 3

--- a/templates/groups.html
+++ b/templates/groups.html
@@ -19,18 +19,18 @@
         padding: 0;
       }
     </style>
-        <link
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
   </head>
   <body>
     <h2>FUNÇÃO DE GRUPOS EM BREVE !!</h2>
-      <p>
-        A criação dessa função requer uma pequena quantidade de verba.
-        Pedimos paciência para o desenvolvimento dessa funcionalidade,
-        que fará pessoas falarem sobre os mesmos interesses
-      </p>
+    <p>
+      A criação dessa função requer uma pequena quantidade de verba. Pedimos
+      paciência para o desenvolvimento dessa funcionalidade, que fará pessoas
+      falarem sobre os mesmos interesses
+    </p>
     <footer class="nav-footer">
       <nav>
         <a href="{{ url_for('feed') }}">
@@ -53,7 +53,7 @@
             src="{{ url_for('static', filename='images/trending.PNG') }}"
             alt="Trending"
             class="icone"
-          />  
+          />
         </a>
         <a href="{{ url_for('groups') }}">
           <img
@@ -70,7 +70,6 @@
           />
         </a>
       </nav>
-    </footer>
     </footer>
   </body>
 </html>
