--- a/static/style.css
+++ b/static/style.css
@@ -384,11 +384,12 @@ button:active {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   z-index: 99;
   cursor: pointer;
+  transition: transform 0.3s ease;
 }
 
 .open-post-btn img {
   width: 45px;
-  height: 25px;
+  height: 45px;
   object-fit: contain;
 }
 
