Teste rápido de deploy

--- a/templates/search.html
+++ b/templates/search.html
@@ -25,11 +25,7 @@
   </head>
   <body>
     <div class="container">
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="Buscar usuários ou posts"
-      />
+      <input type="text" id="searchInput" placeholder="Pesquisar" />
 
       <h2>Usuários encontrados:</h2>
       <ul id="usuariosResultado"></ul>
