Alteração na caixnha de usuarios

--- a/templates/search.html
+++ b/templates/search.html
@@ -23,12 +23,12 @@
       }
       /* Caixinha arredondada pro usuário */
       .usuario-item {
-        background: #222;
+        background: #000000;
         border-radius: 12px;
         padding: 10px 15px;
         display: inline-block;
-        /* pra não pegar a largura toda */
-        box-shadow: 0 0 5px rgba(255, 38, 38, 0.5);
+        gap: 5px;
+        box-shadow: 0 0 5px rgba(255, 0, 0, 0.5);
         transition: background-color 0.2s;
       }
       .usuario-item:hover {
@@ -40,7 +40,7 @@
         font-weight: bold;
       }
       .usuario-item a:hover {
-        text-decoration: underline;
+        text-decoration: none;
       }
     </style>
   </head>
